bitbybit/tests/no_compile/overlapping_bitfield_arrays_with_stride.stderr
error: bitfield!: Detected overlap of field `u8_array` with other field
 --> tests/no_compile/overlapping_bitfield_arrays_with_stride.rs:4:1
  |
4 | / struct Test {
5 | |     #[bits(16..=23, rw)]
6 | |     overlapping_bits: u8,
7 | |     #[bits(0..=7, rw, stride = 16)]
8 | |     u8_array: [u8; 2],
9 | | }
  | |_^
